--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "add": "^2.0.6",
     "react": "17.0.2",
-    "react-native": "0.66.1"
+    "react-native": "0.66.1",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-vector-icons": "^8.1.0",
+    "react-router-native": "^5.2.1",
+    "styled-components": "^5.3.1",
+    "yarn": "^1.22.15"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
+    "babel-plugin-root-import": "^6.6.0",
     "eslint": "7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
@@ -25,5 +32,8 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
