--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.2",
     "react-native": "0.66.1",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-vector-icons": "^8.1.0",
     "react-router-native": "^5.2.1",
     "styled-components": "^5.3.1",
