--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-native": "0.66.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-qrcode-svg": "^6.1.1",
+    "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0",
     "react-router-native": "^5.2.1",
     "styled-components": "^5.3.1",
